[package]
name = "kotoba-ipfs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
tokio = { workspace = true }
futures.workspace   = true
async-trait.workspace = true

sha2.workspace = true
multihash = { workspace = true }
cid = { workspace = true }

libp2p = { version = "0.53", features = [
    "quic", "tcp", "dns", "noise", "yamux",
    "identify", "ping", "macros", "request-response",
] }
co-libp2p-bitswap = "0.27.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber.workspace = true
