[package]
name = "kotoba-ipfs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace    = true
thiserror.workspace = true
tokio               = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
serde               = { workspace = true }
serde_json          = { workspace = true }
reqwest             = { workspace = true, features = ["blocking", "multipart"] }
ciborium.workspace  = true
bytes               = { workspace = true }
tracing.workspace   = true
ed25519-dalek.workspace = true
multibase.workspace = true

# Wasm-safe IPNS record type (shared with kotoba-wasm; ADR-2606066000).
kotoba-ipns-record = { path = "../kotoba-ipns-record" }

# IPFS-compatible CID substrate plus a lightweight self-owned block exchange.
ipld-core = { workspace = true }
multihash-codetable = { version = "0.2", features = ["sha2"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber.workspace = true
tempfile = "3"
