[package]
name = "kotoba-kqe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba Query Engine: Datalog, Arrangement, Delta, MV"

[dependencies]
kotoba-core.workspace = true
kotoba-kse.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlparser.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "arrangement"
harness = false
