[package]
name = "kotoba-kqe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba Query Engine: Datalog, Arrangement, Delta, MV"

[dependencies]
kotoba-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlparser.workspace = true
anyhow.workspace = true

# tokio is feature-gated per ADR-2606013600 D1: native keeps the full runtime;
# wasm32 narrows to `sync` only (the `net` feature pulls `mio`, which does not
# build for wasm). kqe itself uses no `tokio::*` API at runtime.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "arrangement"
harness = false
