[package]
name = "kotoba-kse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba Stream Engine: Journal, Topic, Shelf, Vault"

[dependencies]
kotoba-core.workspace = true
kotoba-crypto.workspace = true
sled.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
object_store.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
