[package]
name = "kotoba-kse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba Stream Engine: Journal, Topic, Shelf, Vault"

[dependencies]
kotoba-core.workspace  = true
kotoba-store.workspace = true
kotoba-crypto.workspace = true
rand.workspace         = true
rand_core.workspace    = true
tokio.workspace        = true
tokio-stream.workspace = true
bytes.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
ciborium.workspace     = true
object_store.workspace = true
thiserror.workspace    = true
anyhow.workspace       = true
tracing.workspace      = true
ed25519-dalek.workspace = true
x25519-dalek.workspace  = true
hex.workspace           = true
blake3.workspace        = true
async-trait.workspace   = true
zeroize.workspace       = true

[dev-dependencies]
tempfile = "3"
