[package]
name = "kotoba-lattice"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KOTOBA Mesh control plane — gossipsub lattice protocol + EDN app manifest + leader-less reconciler/auction (ADR-kotoba-mesh-wasm-hosting)"

# Pure-Rust control-plane core: NO wasmtime / NO libp2p dependency. This crate
# is the *brain* (protocol types + manifest parse + reconcile/auction logic);
# the *wiring* (gossipsub publish/subscribe, component start) lives in
# kotoba-net / kotoba-runtime / kotoba-server which depend on this.
[dependencies]
kotoba-edn = { path = "../kotoba-edn" }   # EDN/Clojure is the default manifest language (§14)
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }            # CBOR wire format for lattice messages
thiserror = { workspace = true }
blake3 = { workspace = true }              # deterministic auction/source-content ids

[dev-dependencies]
serde_json = { workspace = true }
