[package]
name = "kotoba-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM/weight integration: FP8 blob, LoRA delta, KV-cache, inference"

[features]
default = []
# Enable local CPU inference via candle (Gemma 4 E2B). Off by default to keep
# CI builds fast. Turn on with: cargo build -p kotoba-llm --features local-inference
local-inference = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
]

[dependencies]
kotoba-core.workspace = true
kotoba-kse.workspace = true
kotoba-kqe.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

# ML inference — only pulled in when the local-inference feature is enabled
candle-core         = { workspace = true, optional = true }
candle-nn           = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub              = { workspace = true, optional = true }
tokenizers          = { workspace = true, optional = true }
