[package]
name = "kotoba-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM/weight integration: FP8 blob, LoRA delta, KV-cache, inference"

[features]
default = []
# Enable local Metal/CPU inference via candle (Gemma 2 2B IT).
# Turn on with: cargo build -p kotoba-llm --features local-inference
local-inference = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
]
# Enable OpenAI-compatible HTTP inference (Ollama, vLLM, Vultr A16).
# Always enabled in kotoba-server. Set KOTOBA_INFERENCE_URL to use.
http-inference = ["reqwest"]
# Enable WebGPU fine-tuning backend (embedding + LM head, f32 compute, FP8 storage).
# wgpu = "24" aligned with kami-engine (ADR-2605250004).
webgpu-train = ["dep:wgpu", "dep:bytemuck"]
# Enable WebGPU full-transformer inference (Gemma 4 E2B/E4B, f32 compute, FP8 Vault).
# wgpu = "24" aligned with kami-engine (ADR-2605250005).
webgpu-infer = ["dep:wgpu", "dep:bytemuck"]

[dependencies]
kotoba-core.workspace = true
kotoba-kse.workspace = true
kotoba-kqe.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

# HTTP inference — reqwest (rustls-tls, no openssl)
reqwest = { workspace = true, optional = true }

# ML inference — only pulled in when the local-inference feature is enabled
candle-core         = { workspace = true, optional = true }
candle-nn           = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub              = { workspace = true, optional = true }
tokenizers          = { workspace = true, optional = true }

# WebGPU training — only pulled in when the webgpu-train feature is enabled
wgpu     = { version = "24", optional = true }
bytemuck = { version = "1",  features = ["derive"], optional = true }
