[package]
name = "kotoba-media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust media codecs for the utsushi/kotoba media boundary (ADR-2606272200 §3) — R1: MJPEG + PNG decode/encode. No runtime dependency."

[dependencies]
anyhow = { workspace = true }
zune-jpeg = "0.4"
jpeg-encoder = "0.6"
png = "0.17"
