[package]
name = "kotoba-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba libp2p network: QUIC, Noise, GossipSub, Kademlia"

[dependencies]
kotoba-core.workspace = true
kotoba-kse.workspace = true
libp2p = { workspace = true, features = ["tokio"] }
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json = { workspace = true }
