[package]
name = "kotoba-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba libp2p network: QUIC, Noise, GossipSub, Kademlia"

[dependencies]
libp2p = { workspace = true, features = ["tokio"] }
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json = { workspace = true }
# T3 realtime over real libp2p QUIC: drive kotoba-rt's P2p* + ChannelGossipBus.
kotoba-rt = { path = "../kotoba-rt" }
