[package]
name = "kotoba-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba libp2p network: QUIC, Noise, GossipSub, Kademlia"

[dependencies]
kotoba-core = { workspace = true }
kotoba-lattice = { workspace = true }   # lattice control-plane (gossipsub binding, M2)
libp2p = { workspace = true, features = ["tokio"] }
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
# WebRTC transport (browser-dialable Live-plane peers) — optional, see swarm.rs.
libp2p-webrtc = { workspace = true, optional = true }
rand = { workspace = true, optional = true }   # webrtc-direct self-signed cert RNG

[features]
default = []
# Compose a libp2p-webrtc (webrtc-direct) transport alongside QUIC so browsers can
# dial this node on the Live plane. See root ADR-2606271800.
webrtc = ["dep:libp2p-webrtc", "dep:rand"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json = { workspace = true }
# T3 realtime over real libp2p QUIC: drive kotoba-rt's P2p* + ChannelGossipBus.
kotoba-rt = { path = "../kotoba-rt" }
