[package]
name = "kotoba-rad"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kotoba sovereign repository layer: RID, identity journal, delegate/ref validation over kotoba-git"

[dependencies]
kotoba-core = { workspace = true }
kotoba-datomic = { workspace = true }
kotoba-git = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
kotoba-store = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
