[package]
name = "kotoba-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba realtime game sync — deterministic rollback netcode over a per-room bus (ADR-2606060001)"

[features]
# `WasmSim` — a `SimHost` backed by a real WASM guest the host drives, with
# per-frame rollback via direct linear-memory snapshot (ADR-2606060001).
wasm-sim = ["dep:wasmtime"]
# `WasmComponentSim` — drives a real `kotoba:kge` Component-Model guest (the
# portable server+browser path). Rollback save uses the WIT snapshot/restore.
wasm-component = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_bytes          = "0.11"
ciborium.workspace   = true
blake3.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
# Same major as kotoba-runtime so the compiled artifact is shared (no extra build).
wasmtime             = { version = "25", optional = true }
wasmtime-wasi        = { version = "25", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
