[package]
name        = "kotoba-runtime"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
description = "Kotoba WASM Component Model runtime — WIT host for multi-language Kotoba programs"

[dependencies]
kotoba-core.workspace = true
kotoba-kse.workspace  = true
kotoba-kqe.workspace  = true
kotoba-auth.workspace = true

tokio.workspace       = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
ciborium.workspace    = true
bytes.workspace       = true

# WASM component model runtime
wasmtime        = { version = "25", features = ["component-model"] }
wasmtime-wasi   = { version = "25" }
wasmtime-wasi-http = { version = "25" }

# Caching compiled WASM components
dashmap = "5"

# HTTP
http = "1"
hyper = "1"

# EVM JSON-RPC bridge (CALL_FOREIGN class, 5s timeout)
hex.workspace  = true
ureq           = { version = "2", features = ["json"] }

[dev-dependencies]
# Used by the Phase-2 guest_wasm integration tests in tests/runtime_test.rs
ciborium.workspace = true
