[package]
name = "kotoba-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba XRPC / MCP server endpoints"

[features]
default = ["kotoba-llm/http-inference"]
local-inference = ["kotoba-llm/local-inference"]

[[bin]]
name = "kotoba"
path = "src/main.rs"

[dependencies]
kotoba-ingest.workspace  = true
kotoba-core.workspace    = true
kotoba-crypto.workspace  = true
kotoba-signal.workspace  = true
kotoba-store             = { path = "../kotoba-store" }
kotoba-kse.workspace     = true
kotoba-kqe.workspace     = true
kotoba-dht               = { path = "../kotoba-dht" }
kotoba-auth              = { path = "../kotoba-auth" }
kotoba-graph             = { path = "../kotoba-graph" }
kotoba-vm                = { path = "../kotoba-vm" }
kotoba-llm               = { path = "../kotoba-llm" }
kotoba-runtime           = { path = "../kotoba-runtime" }
kotoba-net               = { path = "../kotoba-net" }
tokio.workspace          = true
serde.workspace          = true
serde_json.workspace     = true
tracing.workspace        = true
tracing-subscriber.workspace = true
thiserror.workspace      = true
anyhow.workspace         = true
axum.workspace           = true
tower-http.workspace     = true
base64                   = "0.22"
hex                      = "0.4"
reqwest.workspace        = true
blake3.workspace         = true
bytes.workspace          = true
object_store.workspace   = true
ciborium.workspace       = true

[dev-dependencies]
reqwest.workspace         = true
kotoba-core.workspace     = true
kotoba-kqe.workspace      = true
kotoba-graph              = { path = "../kotoba-graph" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
