[package]
name = "kotoba-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba XRPC / MCP server endpoints"

[features]
default = ["http-inference"]
http-inference = ["kotoba-llm/http-inference"]
local-inference = ["kotoba-llm/local-inference"]
wasm-runtime = ["dep:kotoba-runtime", "dep:kotoba-vm"]
p2p = ["dep:kotoba-net", "wasm-runtime"]
cc-parquet = ["kotoba-ingest/cc-parquet"]

[[bin]]
name = "kotoba-server"
path = "src/main.rs"

[dependencies]
kotoba-ingest.workspace  = true
kotoba-core.workspace    = true
kotoba-edn               = { path = "../kotoba-edn" }
kotoba-datomic           = { path = "../kotoba-datomic" }
kotoba-ipfs              = { path = "../kotoba-ipfs" }
kotoba-vc                = { path = "../kotoba-vc" }
kotoba-didcomm           = { path = "../kotoba-didcomm" }
kotoba-crypto.workspace  = true
kotoba-signal.workspace  = true
kotoba-store             = { path = "../kotoba-store" }
kotoba-kse.workspace     = true
kotoba-kqe.workspace     = true
kotoba-dht               = { path = "../kotoba-dht" }
kotoba-auth              = { path = "../kotoba-auth" }
kotoba-graph             = { path = "../kotoba-graph" }
kotoba-vm                = { path = "../kotoba-vm", optional = true }
kotoba-llm               = { path = "../kotoba-llm" }
kotoba-runtime           = { path = "../kotoba-runtime", optional = true }
kotoba-net               = { path = "../kotoba-net", optional = true }
dashmap.workspace        = true
tokio.workspace          = true
serde.workspace          = true
serde_json.workspace     = true
tracing.workspace        = true
tracing-subscriber.workspace = true
thiserror.workspace      = true
anyhow.workspace         = true
axum.workspace           = true
tower-http.workspace     = true
futures.workspace        = true
base64                   = "0.22"
hex                      = "0.4"
multibase.workspace      = true
reqwest                  = { workspace = true, features = ["blocking"] }
blake3.workspace         = true
bytes.workspace          = true
object_store.workspace   = true
ciborium.workspace       = true
x25519-dalek.workspace   = true
ed25519-dalek.workspace  = true
subtle                   = "2"

[dev-dependencies]
reqwest.workspace         = true
kotoba-core.workspace     = true
kotoba-kqe.workspace      = true
kotoba-graph              = { path = "../kotoba-graph" }
kotoba-auth               = { path = "../kotoba-auth" }
multibase.workspace       = true
zeroize.workspace         = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
