[package]
name = "kotoba-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kotoba XRPC / MCP server endpoints"

[features]
default = ["http-inference"]
http-inference = ["kotoba-llm/http-inference"]
local-inference = ["kotoba-llm/local-inference"]
wasm-runtime = ["dep:kotoba-runtime", "dep:kotoba-vm"]
# Run real kotoba:kge WASM components as room sims (ADR-2606060001 room swap).
realtime-wasm = ["kotoba-rt/wasm-component"]
p2p = ["dep:kotoba-net", "dep:kotoba-lattice", "wasm-runtime"]
cc-parquet = ["kotoba-ingest/cc-parquet"]

[[bin]]
name = "kotoba-server"
path = "src/main.rs"

[dependencies]
kotoba-ingest.workspace  = true
kotoba-core.workspace    = true
kotoba-edn               = { path = "../kotoba-edn" }
kotoba-datomic           = { path = "../kotoba-datomic" }
kotoba-git               = { path = "../kotoba-git" }
flate2.workspace         = true                       # decompress gzip-encoded git smart-HTTP request bodies
kotoba-ipfs              = { path = "../kotoba-ipfs" }
kotoba-vc                = { path = "../kotoba-vc" }
kotoba-didcomm           = { path = "../kotoba-didcomm" }
kotoba-custody.workspace = true
kotoba-crypto.workspace  = true
zeroize.workspace        = true
kotoba-signal.workspace  = true
kotoba-store             = { path = "../kotoba-store" }
kotoba-evm               = { path = "../kotoba-evm" }
kotoba-vault.workspace     = true
kotoba-query.workspace     = true
kotoba-rt                = { path = "../kotoba-rt" }
kotoba-dht               = { path = "../kotoba-dht" }
kotoba-auth              = { path = "../kotoba-auth" }
kotoba-graph             = { path = "../kotoba-graph" }
kotoba-vm                = { path = "../kotoba-vm", optional = true }
kotoba-llm               = { path = "../kotoba-llm" }
kotoba-runtime           = { path = "../kotoba-runtime", optional = true }
kotoba-net               = { path = "../kotoba-net", optional = true }
kotoba-lattice           = { path = "../kotoba-lattice", optional = true }  # lattice control-plane participation (p2p)
dashmap.workspace        = true
tokio.workspace          = true
serde.workspace          = true
serde_json.workspace     = true
tracing.workspace        = true
tracing-subscriber.workspace = true
thiserror.workspace      = true
anyhow.workspace         = true
axum                     = { workspace = true, features = ["ws"] }
tower-http.workspace     = true
futures.workspace        = true
base64                   = "0.22"
hex                      = "0.4"
multibase.workspace      = true
reqwest                  = { workspace = true, features = ["blocking"] }
blake3.workspace         = true
hmac.workspace           = true
sha2.workspace           = true
bytes.workspace          = true
object_store.workspace   = true
ciborium.workspace       = true
x25519-dalek.workspace   = true
ed25519-dalek.workspace  = true
subtle                   = "2"

[dev-dependencies]
reqwest.workspace         = true
kotoba-core.workspace     = true
kotoba-query.workspace      = true
kotoba-graph              = { path = "../kotoba-graph" }
kotoba-auth               = { path = "../kotoba-auth" }
kotoba-ipns-record        = { path = "../kotoba-ipns-record" }
multibase.workspace       = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = "0.24"
kotoba-rt = { path = "../kotoba-rt" }
