[package]
name = "kotoba-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "kotoba-shell — app shell manifest parser and safe component admission for desktop/mobile WebView apps"

[dependencies]
anyhow.workspace = true
kotoba-clj = { path = "../kotoba-clj" }
kotoba-edn = { path = "../kotoba-edn" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
wasmtime.workspace = true
